"Not Answered Yet" -> "Not Answered"

--- a/soclone/templates/questions/question_detail.html
+++ b/soclone/templates/questions/question_detail.html
@@ -51,7 +51,7 @@
             {% if answers_qty %}
               <span class="fs-4">{{ answers_qty }} Answer{{ answers_qty | pluralize:'s' }}</span>
             {% else %}
-              <span class="fs-4">Not Answered Yet</span>
+              <span class="fs-4">Not Answered</span>
             {% endif %}
           </div>
           {% for answer in answers %}
