--- a/soclone/templates/base.html
+++ b/soclone/templates/base.html
@@ -42,7 +42,7 @@
     {% endblock javascript %}
   </head>
   <body>
-    <div class="mb-1">
+    <div class="mb-1 border-bottom border-secondary">
       <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
           <button class="navbar-toggler navbar-toggler-right"
@@ -94,8 +94,8 @@
       </nav>
     </div>
     <div class="container p-0 m-0">
-      <div class="row p-0 m-0">
-        <div class="col-1 p-0 m-0">
+      <div class="row p-0 m-0 vh-100 border-end border-secondary">
+        <div class="col-1 p-0 m-0 vh-100 border-end border-secondary">
           <ul class="nav flex-column">
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'home' %}">Home<span class="visually-hidden">(current)</span></a>
