--- a/soclone/templates/questions/question_detail.html
+++ b/soclone/templates/questions/question_detail.html
@@ -10,7 +10,7 @@
         <span class="fs-4">{{ question.title }}</span>
         <a class="btn btn-primary" href={% url "questions:question_create" %}>Ask Question</a>
       </div>
-      <div class="border-bottom border-primary pb-2">
+      <div class="border-bottom border-secondary pb-2">
         <span>
           <img src="{% static "images/thumbnails/icons8-time-32.png" %}" alt="Asked" />
         {{ posed | timedelta_readable }}</span>
@@ -22,61 +22,57 @@
         {{ views }}</span>
       </div>
     </header>
-    <div class="d-flex">
-      <div class="d-flex flex-column align-items-center mx-2 mt-3">
-        <a class="btn" href="{% url "questions:q_rating" q_pk=qid useful=1 %}">
-          <img src="{% static "images/thumbnails/icons8-slide-up-50.png" %}" alt="Slide up" />
-        </a>
-        <span class="fs-1 fw-bold">{{ q_rating|default_if_none:0 }}</span>
-        <a class="btn" href="{% url "questions:q_rating" q_pk=qid useful=0 %}">
-          <img src="{% static "images/thumbnails/icons8-slide-down-50.png" %}" alt="Slide down" />
-        </a>
-      </div>
-      <div>
+    <div>
+      <div class="d-flex">
+        <div class="d-flex flex-column align-items-center mx-2 mt-3">
+          <a class="btn" href="{% url "questions:q_rating" q_pk=qid useful=1 %}">
+            <img src="{% static "images/thumbnails/icons8-slide-up-50.png" %}" alt="Slide up" />
+          </a>
+          <span class="fs-1 fw-bold">{{ q_rating|default_if_none:0 }}</span>
+          <a class="btn" href="{% url "questions:q_rating" q_pk=qid useful=0 %}">
+            <img src="{% static "images/thumbnails/icons8-slide-down-50.png" %}" alt="Slide down" />
+          </a>
+        </div>
         <div>
           <p>{{ question.problem }}</p>
           <p>{{ question.effort }}</p>
-          <div>
-            {% for tag in question.tags.all %}
-              {% if tag %}
-                <span class="ms-2">{{ tag.name }}</span>
-              {% else %}
-                <span class="mx-2">not_tagged</span>
-              {% endif %}
-            {% endfor %}
-          </div>
-        </div>
-        <article class="answer">
-          <div class="d-flex justify-content-between">
-            {% if answers_qty %}
-              <span class="fs-4">{{ answers_qty }} Answer{{ answers_qty | pluralize:'s' }}</span>
-            {% else %}
-              <span class="fs-4">Not Answered</span>
-            {% endif %}
-          </div>
-          {% for answer in answers %}
-            <div class="d-flex">
-              <div class="d-flex flex-column align-items-center mx-2 mt-3">
-                <a class="btn"
-                   href="{% url "questions:a_rating" q_pk=qid a_pk=answer.id useful=1 %}">
-                  <img src="{% static "images/thumbnails/icons8-slide-up-50.png" %}" alt="Slide up" />
-                </a>
-                <span class="fs-1 fw-bold">{{ answer.rating|default_if_none:0 }}</span>
-                <a class="btn"
-                   href="{% url "questions:a_rating" q_pk=qid a_pk=answer.id useful=0 %}">
-                  <img src="{% static "images/thumbnails/icons8-slide-down-50.png" %}" alt="Slide down" />
-                </a>
-              </div>
-              <div class="border border-primary mt-2">
-                <p>{{ answer.body }}</p>
-                <span>{{ answer.created_at }}</span>
-                <span>{{ answer.user }}</span>
-              </div>
-            </div>
+          {% for tag in question.tags.all %}
+            <span class="ms-2">{{ tag.name }}</span>
+          {% empty %}
+            <span class="mx-2">not_tagged</span>
           {% endfor %}
-          {% include "questions/answer_form.html" %}
-        </article>
+        </div>
       </div>
+      <article class="answer">
+        <div class="d-flex justify-content-between border-bottom border-secondary">
+          {% if answers_qty %}
+            <span class="fs-4">{{ answers_qty }} Answer{{ answers_qty | pluralize:'s' }}</span>
+          {% else %}
+            <span class="fs-4">Not Answered</span>
+          {% endif %}
+        </div>
+        {% for answer in answers %}
+          <div class="d-flex">
+            <div class="d-flex flex-column align-items-center mx-2 mt-3">
+              <a class="btn"
+                 href="{% url "questions:a_rating" q_pk=qid a_pk=answer.id useful=1 %}">
+                <img src="{% static "images/thumbnails/icons8-slide-up-50.png" %}" alt="Slide up" />
+              </a>
+              <span class="fs-1 fw-bold">{{ answer.rating|default_if_none:0 }}</span>
+              <a class="btn"
+                 href="{% url "questions:a_rating" q_pk=qid a_pk=answer.id useful=0 %}">
+                <img src="{% static "images/thumbnails/icons8-slide-down-50.png" %}" alt="Slide down" />
+              </a>
+            </div>
+            <div class="border-bottom border-secondary mt-2 w-100">
+              <p>{{ answer.body }}</p>
+              <span>{{ answer.created_at }}</span>
+              <span>{{ answer.user }}</span>
+            </div>
+          </div>
+        {% endfor %}
+        {% include "questions/answer_form.html" %}
+      </article>
     </div>
   </article>
 {% endblock content %}
