blue color, weight, size added to headings

--- a/soclone/templates/base.html
+++ b/soclone/templates/base.html
@@ -56,7 +56,8 @@
           </button>
           <div class="d-flex align-items-baseline w-100">
             <div class="d-flex align-items-baseline w-100">
-              <a class="navbar-brand" href="{% url 'home' %}">Stack Overflow Clone</a>
+              <a class="navbar-brand fs-4 fw-bolder text-secondary"
+                 href="{% url 'home' %}">Stack Overflow Clone</a>
               <a class="nav nav-link nav-item" href="{% url 'about' %}">About</a>
             </div>
             <div class="collapse navbar-collapse d-inline-flex"
