--- a/soclone/templates/questions/answer_form.html
+++ b/soclone/templates/questions/answer_form.html
@@ -1,4 +1,4 @@
-<span class="fs-4">Your Answer</span>
+<span class="fs-4 fw-bolder text-primary">Your Answer</span>
 <form method="post">
   {% csrf_token %}
   {{ answer_form.as_p }}
