--- a/soclone/templates/questions/question_list.html
+++ b/soclone/templates/questions/question_list.html
@@ -7,7 +7,7 @@
   <div>
     <header>
       <div class="d-flex justify-content-between">
-        <span class="fs-4">Top Questions</span>
+        <span class="fs-4 fw-bolder text-primary">Top Questions</span>
         <a class="btn btn-primary" href={% url "questions:question_create" %}>Ask Question</a>
       </div>
     </header>
