--- a/soclone/templates/questions/question_detail.html
+++ b/soclone/templates/questions/question_detail.html
@@ -7,7 +7,7 @@
   <article class="question">
     <header>
       <div class="d-flex justify-content-between">
-        <span class="fs-4">{{ question.title }}</span>
+        <span class="fs-4 fw-bolder text-primary">{{ question.title }}</span>
         <a class="btn btn-primary" href={% url "questions:question_create" %}>Ask Question</a>
       </div>
       <div class="border-bottom border-secondary pb-2">
@@ -46,9 +46,9 @@
       <article class="answer">
         <div class="d-flex justify-content-between border-bottom border-secondary">
           {% if answers_qty %}
-            <span class="fs-4">{{ answers_qty }} Answer{{ answers_qty | pluralize:'s' }}</span>
+            <span class="fs-4 fw-bolder text-primary">{{ answers_qty }} Answer{{ answers_qty | pluralize:'s' }}</span>
           {% else %}
-            <span class="fs-4">Not Answered</span>
+            <span class="fs-4 fw-bolder text-primary">Not Answered</span>
           {% endif %}
         </div>
         {% for answer in answers %}
