question border-primary -> border-secondary

--- a/soclone/templates/questions/question_list.html
+++ b/soclone/templates/questions/question_list.html
@@ -13,7 +13,7 @@
     </header>
     {% if questions_list %}
       {% for question in questions_list %}
-        <div class="border border-1 border-primary mt-2 rounded">
+        <div class="border border-1 border-secondary mt-2 rounded">
           <div>
             <span class="ms-2 text-success fw-bolder">
               <img src="{% static "images/thumbnails/icons8-answer-30.png" %}" alt="Answered" />
