--- a/soclone/templates/questions/question_list.html
+++ b/soclone/templates/questions/question_list.html
@@ -34,13 +34,7 @@
               </span>
             </div>
             <div class="d-flex justify-content-between">
-              <div>
-                {% for tag in question.tags.all %}
-                  <span class="ms-2">{{ tag.name }}</span>
-                {% empty %}
-                  <span class="mx-2">not_tagged</span>
-                {% endfor %}
-              </div>
+              <div>{% include "questions/tags_line.html" %}</div>
               <div class="me-2">
                 <span>{{ question.user.email }}</span>
                 <span>
