--- a/soclone/templates/questions/question_detail.html
+++ b/soclone/templates/questions/question_detail.html
@@ -4,24 +4,22 @@
 {% load static %}
 
 {% block content %}
-  <article class="question">
-    <header>
-      <div class="d-flex justify-content-between">
-        <span class="fs-4 fw-bolder text-primary">{{ question.title }}</span>
-        <a class="btn btn-primary" href={% url "questions:question_create" %}>Ask Question</a>
-      </div>
-      <div class="border-bottom border-secondary pb-2">
-        <span>
-          <img src="{% static "images/thumbnails/icons8-time-32.png" %}" alt="Asked" />
-        {{ posed | timedelta_readable }}</span>
-        <span>
-          <img src="{% static "images/thumbnails/icons8-sort-by-modified-date-30.png" %}" alt="Modified" />
-        {{ modified | timedelta_readable }}</span>
-        <span>
-          <img src="{% static "images/thumbnails/icons8-eye-30.png" %}" alt="Viewed" />
-        {{ views }}</span>
-      </div>
-    </header>
+  <div class="container">
+    <div class="d-flex justify-content-between">
+      <span class="fs-4 fw-bolder text-primary">{{ question.title }}</span>
+      <a class="btn btn-primary" href={% url "questions:question_create" %}>Ask Question</a>
+    </div>
+    <div class="border-bottom border-secondary pb-2">
+      <span>
+        <img src="{% static "images/thumbnails/icons8-time-32.png" %}" alt="Asked" />
+      {{ posed | timedelta_readable }}</span>
+      <span>
+        <img src="{% static "images/thumbnails/icons8-sort-by-modified-date-30.png" %}" alt="Modified" />
+      {{ modified | timedelta_readable }}</span>
+      <span>
+        <img src="{% static "images/thumbnails/icons8-eye-30.png" %}" alt="Viewed" />
+      {{ views }}</span>
+    </div>
     <div>
       <div class="d-flex">
         <div class="d-flex flex-column align-items-center mx-2 mt-3">
@@ -33,13 +31,21 @@
             <img src="{% static "images/thumbnails/icons8-slide-down-50.png" %}" alt="Slide down" />
           </a>
         </div>
-        <div>
-          <p>{{ question.problem }}</p>
-          <p>{{ question.effort }}</p>
+        <div class="overflow-auto">
+          <p>
+            {% autoescape off %}
+              {{ question.problem }}
+            {% endautoescape %}
+          </p>
+          <p>
+            {% autoescape off %}
+              {{ question.effort }}
+            {% endautoescape %}
+          </p>
           {% include "questions/tags_line.html" %}
         </div>
       </div>
-      <article class="answer">
+      <div>
         <div class="d-flex justify-content-between border-bottom border-secondary">
           {% if answers_qty %}
             <span class="fs-4 fw-bolder text-primary">{{ answers_qty }} Answer{{ answers_qty | pluralize:'s' }}</span>
@@ -61,14 +67,18 @@
               </a>
             </div>
             <div class="border-bottom border-secondary mt-2 w-100">
-              <p>{{ answer.body }}</p>
+              <p>
+                {% autoescape off %}
+                  {{ answer.body }}
+                {% endautoescape %}
+              </p>
               <span>{{ answer.created_at }}</span>
               <span>{{ answer.user }}</span>
             </div>
           </div>
         {% endfor %}
         {% include "questions/answer_form.html" %}
-      </article>
+      </div>
     </div>
-  </article>
+  </div>
 {% endblock content %}
