TinyMCE JS filter for editor input length is switched off

--- a/soclone/templates/base.html
+++ b/soclone/templates/base.html
@@ -169,8 +169,11 @@
           custom_undo_redo_levels: 10,
           compressor: true,
           promotion: false,
+          {
+            # js powered TinyMCE editor input length constraint #
+          }
           setup: function(editor) {
-            let limitValue = 20
+            let limitValue = 0
             editor.on("submit", function(event) {
               let numChars = tinymce.activeEditor.plugins.wordcount.body.getCharacterCount();
               if (numChars < limitValue) {
